--- a/Driver.HyperXAlloy.RGB/Driver.HyperXAlloy.RGB.csproj
+++ b/Driver.HyperXAlloy.RGB/Driver.HyperXAlloy.RGB.csproj
@@ -37,9 +37,6 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="SimpleLed, Version=1.0.0.4, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\SimpleLed.1.0.16\lib\net472\SimpleLed.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -62,6 +59,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Elite RGB.png" />
     <EmbeddedResource Include="FPS RGB.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Interface\SimpleLed\SimpleLed.csproj">
+      <Project>{eb4729f4-0bf6-41d3-9548-f8c7846a2025}</Project>
+      <Name>SimpleLed</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
